style: change background and some links

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <li class="nav-item"><a href="./pages/about.html"><span> О нас </span></a></li>
                 <li class="nav-item"><a href="./pages/services.html"><span> Услуги </span></a></li>
                 <li class="nav-item"><a href="./pages/order.html"><span> Заказать </span></a></li>
+                <li class="nav-item-login"><a href="http://localhost:3000/auth"><span> Вход для сотрудников</span></a></li>
             </ul>
         </div>
-
     </div>
 
     <div class="central">
