--- a/pages/services.html
+++ b/pages/services.html
@@ -27,9 +27,9 @@
         <div class="nav">
             <ul class="nav-list">
                 <li class="nav-item"><a href="../index.html"><span> Главная </span></a></li>
-                <li class="nav-item"><a href="#"><span> О нас </span></a></li>
-                <li class="nav-item"><a href="../index.html"><span> Услуги </span></a></li>
-                <li class="nav-item"><a href="../index.html"><span> Заказать </span></a></li>
+                <li class="nav-item"><a href="./about.html"><span> О нас </span></a></li>
+                <li class="nav-item"><a href="./services.html"><span> Услуги </span></a></li>
+                <li class="nav-item"><a href="./order.html"><span> Заказать </span></a></li>
             </ul>
         </div>
 
@@ -38,14 +38,148 @@
     <div class="central">
         <main class="main main-services">
 
-<div class="test">
-    <a href="http://localhost:3000/">Посмотреть список услуг</a>
-    <a href="http://localhost:3000/clients">Посмотреть список клиентов</a>
-    <a href="http://localhost:3000/masters">Посмотреть список мастеров</a>
-    <a href="http://localhost:3000/orders">Посмотреть список заказов</a>
-</div>
+            <h1 class="title">Услуги и Цены:</h1>
+            <table class="table">
+                <tr>
+                    <th>Наименование услуги</th>
+                    <th>Стоимость (бел.р.)</th>
+                </tr>
+                <tr>
+                    <td colspan="2" class="td-title">Компьютеры и ноутбуки</td>
+                </tr>
+                <tr>
+                    <td>Замена блока питания
+                    </td>
+                    <td>200</td>
+                </tr>
+                <tr>
+                    <td>Замена верхнего корпуса ноутбука
+                    </td>
+                    <td>120</td>
+                </tr>
+                <tr>
+                    <td>Замена видеокарты
+                    </td>
+                    <td>100</td>
+                </tr>
+                <tr>
+                    <td>Замена гнезда питания, USB, аудио входа
+                    </td>
+                    <td>40</td>
+                </tr>
+                <tr>
+                    <td>Замена динамика/микрофона
+                    </td>
+                    <td>45</td>
+                </tr>
+                <tr>
+                    <td>Замена матрицы ноутбука
+                    </td>
+                    <td>180</td>
+                </tr>
+                <tr>
+                <tr>
+                    <td>Замена метеринской платы
+                    </td>
+                    <td>200</td>
+                </tr>
+                <tr>
+                    <td>Замена нижнего корпуса ноутбука
+                    </td>
+                    <td>80</td>
+                </tr>
+                <tr>
+                    <td>Замена оперативной памяти
+                    </td>
+                    <td>110</td>
+                </tr>
+                <tr>
+                    <td>Замена северн./южн. моста мат.платы
+                    </td>
+                    <td>150</td>
+                </tr>
+                <tr>
+                    <td>Лечение от вирусов
 
+                    </td>
+                    <td>6</td>
+                </tr>
+                <tr>
+                    <td>Переустановка Windows</td>
+                    <td>20</td>
+                </tr>
+                <tr>
+                    <td>Пропайка элементов мат.платы
+                    </td>
+                    <td>75</td>
+                </tr>
+                <tr>
+                    <td>Установка ПО, антивируса
+                    </td>
+                    <td>11</td>
+                </tr>
+                <tr class="last-line">
+                    <td>Чистка от пыли и замена термопасты</td>
+                    <td>25</td>
+                </tr>
+                <tr>
+                    <td colspan="2" class="td-title">Планшеты</td>
+                </tr>
+                <tr>
+                    <td>Замена гнезда питания, аудио входа
+                    </td>
+                    <td>40</td>
+                </tr>
+                <tr>
+                    <td>Замена динамика/микрофона
+                    </td>
+                    <td>45</td>
+                </tr>
+                <tr>
+                    <td>Замена матрицы
+                    </td>
+                    <td>100</td>
+                </tr>
+                <tr>
+                    <td>Перепрошивка
+                    </td>
+                    <td>12</td>
+                </tr>
+                <tr>
+                    <td>Установка навигатора (лицензия)
+                    </td>
+                    <td>20</td>
+                </tr>
+                <tr class="last-line">
+                    <td>Установка ПО
+                    </td>
+                    <td>11</td>
+                </tr>
+                <tr>
+                    <td colspan="2" class="td-title">Прочие услуги</td>
+                </tr>
+                <tr>
+                    <td>Восстановление информации с ЖД/флешки
+                    </td>
+                    <td>50</td>
+                </tr>
+                <tr>
+                    <td>Вызов курьера или мастера на дом
+                    </td>
+                    <td>15</td>
+                </tr>
+                <tr>
+                    <td>Заправка картриджа (с выездом)
+                    </td>
+                    <td>25</td>
+                </tr>
+                <tr class="last-line">
+                    <td>Удаленная помощь в найстройке ПК
+                    </td>
+                    <td>50</td>
+                </tr>
 
+            </table>
         </main>
 
         <footer class="footer">
@@ -70,6 +204,6 @@
         </footer>
     </div>
 </div>
-<script src="../app.js"></script>
+
 </body>
 </html>
