--- a/pages/order.html
+++ b/pages/order.html
@@ -27,9 +27,9 @@
         <div class="nav">
             <ul class="nav-list">
                 <li class="nav-item"><a href="../index.html"><span> Главная </span></a></li>
-                <li class="nav-item"><a href="#"><span> О нас </span></a></li>
-                <li class="nav-item"><a href="../index.html"><span> Услуги </span></a></li>
-                <li class="nav-item"><a href="../index.html"><span> Заказать </span></a></li>
+                <li class="nav-item"><a href="./about.html"><span> О нас </span></a></li>
+                <li class="nav-item"><a href="./services.html"><span> Услуги </span></a></li>
+                <li class="nav-item"><a href="./order.html"><span> Заказать </span></a></li>
             </ul>
         </div>
 
