--- a/pages/about.html
+++ b/pages/about.html
@@ -48,33 +48,103 @@
 
             <div class="workers">
                 <div class="workers-first-row">
-                    <figure>
-                        <img src="../assets/images/about/andrey2.png" alt="Директор"/>
-                        <figcaption> Андрей Куваев<p> (Директор)</p>
-                        </figcaption>
-                    </figure>
-                    <figure>
-                        <img src="../assets/images/about/rosolko.png" alt="Росолько"/>
-                        <figcaption> Леонид Росолько<p> (ПК и ноутбуки)</p></figcaption>
-                    </figure>
-                    <figure>
-                        <img src="../assets/images/about/lukashin.png" alt="Лукашин"/>
-                        <figcaption> Георгий Лукашин<p> (ПК и ноутбуки)</p></figcaption>
-                    </figure>
+                    <a href="#director-info">
+                        <figure class="director-img" title="Подробнее">
+                            <img src="../assets/images/about/andrey2.png" alt="Директор"/>
+                            <figcaption> Андрей Куваев<p> (Директор)</p></figcaption>
+                        </figure>
+                    </a>
+                    <!-- popup №1 -->
+                    <a href="#" class="overlay" id="director-info"></a>
+                    <div class="popup">
+                        <p>Куваев Андрей Андреевич <br>(директор)</p>
+                        <p>После окончания Политихнического института работал мастером
+                            по ремонту компьютеров в компании "Новатек Технолоджис" (2009-2012гг).</p>
+                        <p>В 2012 году открыл свою мастерскую по ремонту стационарных компьютеров.</p>
+                        <p>В 2015 году расширил спектр оказываемых услуг и нанял первых сотрудников в сфере
+                            ремонта ноутбуков и техники Apple.</p>
+                        <p>В 2017 году переехал в центр г.Минска на проспект Победителей с
+                            расширением штата сотрудников.</p>
+                        <p>Регулярно проводит мастер-классы по диагностике проблем и модернизации компьютеров.</p>
+                        <a class="close" title="Закрыть" href="#close"></a>
+                    </div>
+                    <a href="#employee1-info">
+                        <figure>
+                            <img src="../assets/images/about/rosolko.png" alt="Росолько"/>
+                            <figcaption> Кирилл Олибегов<p> (ПК и ноутбуки)</p></figcaption>
+                        </figure>
+                    </a>
+                    <!-- popup №2 -->
+                    <a href="#" class="overlay" id="employee1-info"></a>
+                    <div class="popup">
+                        <p>Олибегов Кирилл Магомедович<br>(ПК и ноутбуки)</p>
+                        <p>Работает в компании с 2015 года. </p>
+                        <p>Специализируется на сложном ремонте компьютеров и ноутбуков, в том числе после
+                            неудачного ремонта в других мастерских.</p>
+                        <a class="close" title="Закрыть" href="#close"></a>
+                    </div>
+                    <a href="#employee2-info">
+                        <figure>
+                            <img src="../assets/images/about/lukashin.png" alt="Лукашин"/>
+                            <figcaption> Роман Алтуев<p> (ПК и ноутбуки)</p></figcaption>
+                        </figure>
+                        <!-- popup №3 -->
+                        <a href="#" class="overlay" id="employee2-info"></a>
+                        <div class="popup">
+                            <p>Алтуев Роман Романович <br>(ПК и ноутбуки)</p>
+                            <p>Работает в компании с 2017 года. </p>
+                            <p>Проводит максимально точную диагностику с определением проблемы и причин поломки.</p>
+                            <p>Занимается ремонтом компьютеров и ноутбуков средней сложности.</p>
+                            <p>Ремонтирует планшеты.</p>
+                            <a class="close" title="Закрыть" href="#close"></a>
+                        </div>
                 </div>
                 <div class="workers-second-row">
-                    <figure>
-                        <img src="../assets/images/about/ahmetov.png" alt="Ахметов"/>
-                        <figcaption> Амир Ахметов <p> (Apple)</p></figcaption>
-                    </figure>
-                    <figure>
-                        <img src="../assets/images/about/larin.png" alt="Ларин"/>
-                        <figcaption> Евгений Ларин<p> (Apple)</p></figcaption>
-                    </figure>
-                    <figure>
-                        <img src="../assets/images/about/boruhin.png" alt="Борухиин"/>
-                        <figcaption> Артур Борухин<p> (Модернизация)</p></figcaption>
-                    </figure>
+                    <a href="#employee3-info">
+                        <figure>
+                            <img src="../assets/images/about/ahmetov.png" alt="Ахметов"/>
+                            <figcaption> Амир Ахметов <p> (Apple)</p></figcaption>
+                        </figure>
+                    </a>
+                    <!-- popup №4 -->
+                    <a href="#" class="overlay" id="employee3-info"></a>
+                    <div class="popup">
+                        <p>Ахметов Амир Азаматович <br>(Apple)</p>
+                        <p>Работает в компании с 2015 года. </p>
+                        <p>Специализируется в ремонте MacBook повышенной сложности.</p>
+                        <a class="close" title="Закрыть" href="#close"></a>
+                    </div>
+                    <a href="#employee4-info">
+                        <figure>
+                            <img src="../assets/images/about/larin.png" alt="Ларин"/>
+                            <figcaption> Олег Тельцов<p> (Apple)</p></figcaption>
+                        </figure>
+                    </a>
+                    <!-- popup №5 -->
+                    <a href="#" class="overlay" id="employee4-info"></a>
+                    <div class="popup">
+                        <p>Тельцов Олег Александрович <br>(Apple)</p>
+                        <p>Работает в компании с 2018 года. </p>
+                        <p>Занимается ремонтом Macbook и ipad любой сложности.</p>
+                        <a class="close" title="Закрыть" href="#close"></a>
+                    </div>
+                    <a href="#employee5-info">
+                        <figure>
+                            <img src="../assets/images/about/boruhin.png" alt="Борухиин"/>
+                            <figcaption> Альберт Банин<p> (Модернизация)</p></figcaption>
+                        </figure>
+                    </a>
+                    <!-- popup №6 -->
+                    <a href="#" class="overlay" id="employee5-info"></a>
+                    <div class="popup">
+                        <p>Банин Альберт Владимирович <br>(ремонт и модернизация ПК и ноутбуков)</p>
+                        <p>Работает в компании с 2018 года. </p>
+                        <p>Специализируется на модернизации персональных компьютеров и ноутбуков.</p>
+                        <p>Регулярно учавствует в мастер-классах по модернизации на специализированных конференциях
+                           в Москве и Вильнюсе.</p>
+                        <p>Восстанавливает утерянную информацию с жестких и переносных дисков.</p>
+                        <a class="close" title="Закрыть" href="#close"></a>
+                    </div>
                 </div>
             </div>
 
@@ -89,7 +159,7 @@
 
             <div class="contacts-about ">
                 <h2>Наши контакты:</h2>
-                 <div>
+                <div>
                     <a href="tel:+375291135677" title="Позвоните" class="tel">
                         <img src="../assets/images/about/phone_blue.png" alt="Телефон">
                     </a>
@@ -112,61 +182,82 @@
             <div class="feedback">
                 <input type="checkbox" id="blockquote-open" class="hide"/>
                 <label for="blockquote-open">
-                <h2> <span class="pointer"> &#5125; </span> <span> Прочитать отзывы наших клиентов </span> <span class="pointer"> &#5130; </span> </h2>
+                    <h2><span class="pointer"> &#5125; </span> <span> Прочитать отзывы наших клиентов </span> <span
+                            class="pointer"> &#5130; </span></h2>
                 </label>
                 <div class="blockquote">
-                <blockquote>
-                    <p>Быстро, качественно и на совесть . человек сделал вовремя и все как обещал и даже больше - кроме замены корпуса , вычистил ноут, сделал грубо говоря ТО машинке :)</p>
-                    <footer>— <cite>Вадим</cite> на заказ замена корпуса Lenovo s510p</footer>
-                </blockquote>
+                    <blockquote>
+                        <p>Быстро, качественно и на совесть . человек сделал вовремя и все как обещал и даже больше -
+                            кроме замены корпуса , вычистил ноут, сделал грубо говоря ТО машинке :)</p>
+                        <footer>— <cite>Вадим</cite> на заказ замена корпуса Lenovo s510p</footer>
+                    </blockquote>
 
-                <blockquote>
-                    <p>Работа выполнена качественно и в срок. Рекомендую!</p>
-                    <footer>— <cite>Александр</cite> на заказ Чистка 2-х ноутбуков</footer>
-                </blockquote>
+                    <blockquote>
+                        <p>Работа выполнена качественно и в срок. Рекомендую!</p>
+                        <footer>— <cite>Александр</cite> на заказ Чистка 2-х ноутбуков</footer>
+                    </blockquote>
 
-                <blockquote>
-                    <p>Второй раз доверяю человеку свой компьютер. Второй раз остаюсь довольна выполненной работой. Большое спасибо!</p>
-                    <footer>— <cite>Катерина</cite> на заказ Разобраться с клавиатурой</footer>
-                </blockquote>
+                    <blockquote>
+                        <p>Второй раз доверяю человеку свой компьютер. Второй раз остаюсь довольна выполненной работой.
+                            Большое спасибо!</p>
+                        <footer>— <cite>Катерина</cite> на заказ Разобраться с клавиатурой</footer>
+                    </blockquote>
 
-                <blockquote>
-                    <p>Заявленные услуги выполнены качественно (ноутбук вернулся из ремонта без малейшего намека на косметические дефекты), диагностика в течении одного дня - бесплатно, дальше по телефону оговорены все нюансы ремонта (стоимость, сроки). Все выполнено строго в оговоренный срок без проволочек и а оговоренную сумму без каких либо непредвиденных обязательств. В дальнейшем в случае необходимости так же буду обращаться к этому исполнителю.
-                        <br>P.S. Мелочь а приятно. Ноутбук из ремонта забирала жена, случайно дала лишнею купюру, вообщем девушка "приемщик" все пересчитала и указала на лишние деньги. Вообщем лично от жены дополнительный плюс в карму за порядочность Вам и Вашим сотрудникам</p>
-                    <footer>— <cite>Антон</cite> на заказ Ремонт ноутбука ASUS K551LN-XX010D
-                    </footer>
-                </blockquote>
+                    <blockquote>
+                        <p>Заявленные услуги выполнены качественно (ноутбук вернулся из ремонта без малейшего намека на
+                            косметические дефекты), диагностика в течении одного дня - бесплатно, дальше по телефону
+                            оговорены все нюансы ремонта (стоимость, сроки). Все выполнено строго в оговоренный срок без
+                            проволочек и а оговоренную сумму без каких либо непредвиденных обязательств. В дальнейшем в
+                            случае необходимости так же буду обращаться к этому исполнителю.
+                            <br>P.S. Мелочь а приятно. Ноутбук из ремонта забирала жена, случайно дала лишнею купюру,
+                            вообщем девушка "приемщик" все пересчитала и указала на лишние деньги. Вообщем лично от жены
+                            дополнительный плюс в карму за порядочность Вам и Вашим сотрудникам</p>
+                        <footer>— <cite>Антон</cite> на заказ Ремонт ноутбука ASUS K551LN-XX010D
+                        </footer>
+                    </blockquote>
 
-                <blockquote>
-                    <p>Мастер приехал оперативно. На месте установил причину неисправности, подробно рассказал о вариантах ремонта и назвал примерную стоимость. Так как отремонтировать на месте не было возможности забрал компьютер с собой. В итоге всю сделали в короткие сроки. Сервисом и ценой полностью доволен. Рекомендую всем обращаться за компьютерной помощью к данному исполнителю.</p>
-                    <footer>— <cite>ИП Тиханович Дмитрий Михайлович</cite> на заказ Ремонт компьютера</footer>
-                </blockquote>
+                    <blockquote>
+                        <p>Мастер приехал оперативно. На месте установил причину неисправности, подробно рассказал о
+                            вариантах ремонта и назвал примерную стоимость. Так как отремонтировать на месте не было
+                            возможности забрал компьютер с собой. В итоге всю сделали в короткие сроки. Сервисом и ценой
+                            полностью доволен. Рекомендую всем обращаться за компьютерной помощью к данному
+                            исполнителю.</p>
+                        <footer>— <cite>ИП Тиханович Дмитрий Михайлович</cite> на заказ Ремонт компьютера</footer>
+                    </blockquote>
 
-                <blockquote>
-                    <p>Мастер внимательный, аккуратный, сроки и сумма заказа соответсвуют. Приятный пластиковая вип-карта на 13% скидки, рекомендую</p>
-                    <footer>— <cite>Антон</cite> на заказ Установить Виндовс</footer>
-                </blockquote>
+                    <blockquote>
+                        <p>Мастер внимательный, аккуратный, сроки и сумма заказа соответсвуют. Приятный пластиковая
+                            вип-карта на 13% скидки, рекомендую</p>
+                        <footer>— <cite>Антон</cite> на заказ Установить Виндовс</footer>
+                    </blockquote>
 
-                <blockquote>
-                    <p>Спасибо за оперативность, буду обращаться ещё. Мастер очень вежливый.</p>
-                    <footer>— <cite>Олег</cite> на заказ Asus X551MA нужна замена процессора.</footer>
-                </blockquote>
+                    <blockquote>
+                        <p>Спасибо за оперативность, буду обращаться ещё. Мастер очень вежливый.</p>
+                        <footer>— <cite>Олег</cite> на заказ Asus X551MA нужна замена процессора.</footer>
+                    </blockquote>
 
-                <blockquote>
-                    <p>Быстро повели диагностику, держали в курсе во время всего процесса ремонта. Очень приятное обслуживание.</p>
-                    <footer>— <cite>Ольга</cite> на заказ Не заряжается аккумулятор ноутбука</footer>
-                </blockquote>
+                    <blockquote>
+                        <p>Быстро повели диагностику, держали в курсе во время всего процесса ремонта. Очень приятное
+                            обслуживание.</p>
+                        <footer>— <cite>Ольга</cite> на заказ Не заряжается аккумулятор ноутбука</footer>
+                    </blockquote>
 
-                <blockquote>
-                    <p>Работа выполнена на достойном уровне, и достаточно быстро. Никаких претензий по качеству нет. Была заменена матрица, очищены внутренности ноутбука, восстановлены столбики внутри. Ноутбук получил вторую жизнь. Спасибо исполнителям.</p>
-                    <footer>— <cite>Михаил</cite> на заказ Замена матрицы ноутбука Lenovo G580
-                    </footer>
-                </blockquote>
+                    <blockquote>
+                        <p>Работа выполнена на достойном уровне, и достаточно быстро. Никаких претензий по качеству нет.
+                            Была заменена матрица, очищены внутренности ноутбука, восстановлены столбики внутри. Ноутбук
+                            получил вторую жизнь. Спасибо исполнителям.</p>
+                        <footer>— <cite>Михаил</cite> на заказ Замена матрицы ноутбука Lenovo G580
+                        </footer>
+                    </blockquote>
 
-                <blockquote>
-                    <p>Рассказываю - у нас сломался компьютер, не загружалась система и на экране светились полоски, мы разместили заказ на услуги на онлайнере и в течение суток выбрали специалиста по рейтингу и отзывам. Он приехал на следующий день к нам, установил причину поломки (видеокарта), далее установил новую видеокарту, установил систему и установил все нужные программы. И всё это - за 1 час!!! Мы довольны!!! Спасибо большое!!! 😊</p>
-                    <footer>— <cite>Мария</cite> на заказ Диагностика компьютер и ремонт</footer>
-                </blockquote>
+                    <blockquote>
+                        <p>Рассказываю - у нас сломался компьютер, не загружалась система и на экране светились полоски,
+                            мы разместили заказ на услуги на онлайнере и в течение суток выбрали специалиста по рейтингу
+                            и отзывам. Он приехал на следующий день к нам, установил причину поломки (видеокарта), далее
+                            установил новую видеокарту, установил систему и установил все нужные программы. И всё это -
+                            за 1 час!!! Мы довольны!!! Спасибо большое!!! 😊</p>
+                        <footer>— <cite>Мария</cite> на заказ Диагностика компьютер и ремонт</footer>
+                    </blockquote>
                 </div>
             </div>
         </main>
