feat: add delete function for all views

--- a/pages/order.html
+++ b/pages/order.html
@@ -55,7 +55,7 @@
                     </li>
                     <li>
                         <label for="phone">Телефон:</label>
-                        <input type="text" name="website"  id="phone" placeholder="80291123443" required pattern="80(29|44)[0-9]{7}"/>
+                        <input type="text" name="phone"  id="phone" placeholder="80291123443" required pattern="80(29|44)[0-9]{7}"/>
                         <span class="form-hint">Верный формат: "80291123443"</span>
                     </li>
                     <li>
