feat: add Views for online-order with function add data to table online_orders

--- a/pages/about.html
+++ b/pages/about.html
@@ -29,7 +29,7 @@
                 <li class="nav-item"><a href="../index.html"><span> Главная </span></a></li>
                 <li class="nav-item"><a href="./about.html"><span> О нас </span></a></li>
                 <li class="nav-item"><a href="./services.html"><span> Услуги </span></a></li>
-                <li class="nav-item"><a href="./order.html"><span> Заказать </span></a></li>
+                <li class="nav-item"><a href="http://localhost:3000/order_online"><span> Заказать </span></a></li>
             </ul>
         </div>
 
