--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li class="nav-item"><a href="./index.html"><span> Главная </span></a></li>
                 <li class="nav-item"><a href="./pages/about.html"><span> О нас </span></a></li>
                 <li class="nav-item"><a href="./pages/services.html"><span> Услуги </span></a></li>
-                <li class="nav-item"><a href="./pages/order.html"><span> Заказать </span></a></li>
+                <li class="nav-item"><a href="http://localhost:3000/order_online"><span> Заказать </span></a></li>
                 <li class="nav-item-login"><a href="http://localhost:3000/auth"><span> Вход для сотрудников</span></a></li>
             </ul>
         </div>
